# ibrief

./: .gitignore  Cargo.toml  README.md  SPEC.md  justfile
.github/workflows/: ci.yml
config/: profile.toml  sources.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: bakeoff.rs  lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/learn/: Cargo.toml
crates/learn/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/optimize/: Cargo.toml
crates/optimize/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs  semantic.rs  topics.rs
crates/research/: Cargo.toml
crates/research/src/: lib.rs
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
docs/: index.html  llms.txt  robots.txt  sitemap.xml  styles.css
docs/en/: index.html
docs/es/: index.html
docs/fr/: index.html
docs/pt/: index.html
ops/: com.ibrief.daily.plist
