[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/llm",
    "crates/ingest",
    "crates/pipeline",
    "crates/store",
    "crates/telegram",
    "crates/eval",
    "crates/learn",
    "crates/optimize",
    "crates/sources",
    "crates/research",
    "crates/app",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
feed-rs = "2"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
rand = "0.8"
rand_distr = "0.4"
futures = "0.3"

ibrief-core = { path = "crates/core" }
ibrief-llm = { path = "crates/llm" }
ibrief-ingest = { path = "crates/ingest" }
ibrief-pipeline = { path = "crates/pipeline" }
ibrief-store = { path = "crates/store" }
ibrief-telegram = { path = "crates/telegram" }
ibrief-eval = { path = "crates/eval" }
ibrief-learn = { path = "crates/learn" }
ibrief-optimize = { path = "crates/optimize" }
ibrief-sources = { path = "crates/sources" }
ibrief-research = { path = "crates/research" }
