[package]
name = "ibrief-telegram"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ibrief-core.workspace = true
ibrief-store.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
